convert to Dist::Zilla

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,21 @@
-.*
-!.gitignore
-XS.*
-!XS.xs
-Makefile*
-!Makefile.PL
-META.yml
-blib
-build
-inc
-pm_to_blib
-MANIFEST*
-!MANIFEST.SKIP
-Debian*
-README
-Class-C3-XS-*
+/.ackrc
+/.build/
+!/.gitignore
+/.latest
+/Class-C3-XS-*/
+/Class-C3-XS-*.tar.gz
+/Makefile
+/Makefile.old
+/META.yml
+/META.json
+/MYMETA.yml
+/MYMETA.json
+/blib/
+/build/
+/pm_to_blib
+/*.bs
+/*.c
+/*.o
+/blib/
+/_eumm/
+!/XS.xs
