use new-style authority config

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ copyright_year = 2007
 license     = Perl_5
 
 [@Author::ETHER]
-:version = 0.096
+:version = 0.119    ; for installer -> EUMM dep
 installer = MakeMaker   ; stay 5.6-friendly
-Authority.authority = cpan:FLORA
+authority = cpan:FLORA
 -remove = PodCoverageTests
